src/components/Dashboard/Sidebar/Sidebar.module.css
.sidebar {
  background-color: #fdfdfd;
  border-radius: 1.25rem;
  border: 0.063rem solid #e5e5e5;
  padding: 0;
  height: calc(100vh - 3rem);
  position: fixed;
  top: 1.5rem;
  left: 0.75rem;
  width: calc(10.5rem- 0.75rem);
  z-index: 1000;
  display: flex;
  flex-direction: column;
  min-height: 45.063rem;
}

.sidebarHeader {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 7.563rem;
  padding: 3rem 1.5rem 0 1rem;
  margin-bottom: 2rem;
}

.sidebarMenu {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 100%;
}

.otherItemsContainer,
.helpLogoutContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.nav {
  padding: 1.5rem 1.5rem 1.5rem 1rem;
  gap: 0.563rem;
  width: 10.5rem;
  height: 5rem;

  font-weight: 400;
  line-height: 120%;
  justify-content: flex-start;
  align-items: center;
  cursor: pointer;
  display: flex;
  color: var(--color-fg-light);
  text-decoration: none;
}

.nav:active,
.nav.active {
  border-right: 0.25rem solid #eb7005;
  color: #db5c00;
  font-weight: 700;
  fill: #db5c00;
}

.icon {
  fill: var(--color-fg-light);
  font-size: 32px;
}

.icon.active {
  fill: #db5c00;
}

.nav:focus-visible {
  outline: none;
  border: 0.25rem solid #ef8a37;
  transition: all 0.3s ease;
}

.nav:hover {
  background-color: #fdf1e6;
  font-weight: 700;
}

.icon:active {
  font-variation-settings: '"FILL" 1, "wght" 400, "GRAD" 0, "opsz" 40';
  color: #DB5C00 !important;
}

.icon:hover {
  font-variation-settings: '"FILL" 1, "wght" 400, "GRAD" 0, "opsz" 40';
}



@media (max-width: 768px) {
  .sidebar {
    width: calc(100% - 24px);
    height: auto;
    position: relative;
    margin: 24px 12px;
  }

  .sidebarHeader,
  .sidebarMenu {
    padding: 8px;
  }

  .sidebarMenu {
    flex-direction: row;
    overflow-x: auto;
  }
}

